# Web-Browser

./: .gitignore  AGENTS.md  CEF_SHA256  CEF_SHA256_WIN64  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  MIGRATION-bridge-map.md  README.md  biome.json  package.json  plan.md  setup_deps.sh  vcpkg.json
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: cookie-privacy-policy.md
engine/: BUILD.gn  README.md
engine/backend/: Cargo.toml  build.rs
engine/backend/src/: backend.rs  bridge.rs  lib.rs
engine/gn/: BUILD.gn  args.gn
engine/scripts/: bootstrap-chromium.sh  build-engine.sh
engine/shim/: bridge.cc  bridge.h  otf_bridge.mojom  otf_bridge_host.cc  otf_bridge_host.h  otf_bridge_render_frame_observer.cc  otf_bridge_render_frame_observer.h  otf_browser_context.cc  otf_browser_context.h  otf_browser_context_manager.cc  otf_browser_context_manager.h  otf_browser_main_parts.cc  otf_browser_main_parts.h  otf_content_browser_client.cc  otf_content_browser_client.h  otf_content_client.cc  otf_content_client.h  otf_content_renderer_client.cc  otf_content_renderer_client.h  otf_devtools.cc  otf_devtools.h  otf_internal_url_loader_factory.cc  otf_internal_url_loader_factory.h  otf_main.cc  otf_main_delegate.cc  otf_main_delegate.h  otf_platform_window.h  otf_popup_overlay.cc  otf_popup_overlay.h  otf_tab_host.cc  otf_tab_host.h  otf_trust.cc  otf_trust.h  otf_window.cc  otf_window.h  otf_window_aura.cc
include/: otf_app.h  otf_bookmark_runtime.h  otf_browse_runtime.h  otf_browser_shell.h  otf_certificate_runtime.h  otf_clear_data_rpc.h  otf_console_rpc.h  otf_context_menu_runtime.h  otf_cookie_tracking_rpc.h  otf_devtools_bridge.h  otf_doc_preview_rpc.h  otf_doc_preview_runtime.h  otf_downloads_rpc.h  otf_downloads_runtime.h  otf_event_runtime.h  otf_find_runtime.h  otf_findbar_rpc.h  otf_handler.h  otf_history_bookmarks_rpc.h  otf_image_preview_rpc.h  otf_image_preview_runtime.h  otf_keyboard_runtime.h  otf_keyboard_shortcuts.h  otf_lifecycle_runtime.h  otf_memory_runtime.h  otf_message_router_handler.h  otf_native_rpc.h  otf_navigation_rpc.h  otf_page_policy.h  otf_page_runtime.h  otf_permissions_rpc.h  otf_popup_overlay.h  otf_popup_runtime.h  otf_request_context_runtime.h  otf_resource_runtime.h  otf_rpc_dispatcher.h  otf_search_rpc.h  otf_settings_rpc.h  otf_shutdown_runtime.h  otf_site_data_rpc.h  (+10 more)
packaging/: AppRun  nfpm.yaml  otf-browser.desktop  postinstall.sh
scripts/: collect-windows-crash-report.ps1  install.sh  release.js  run-crash-report.cmd  run-e2e-suite.js  run-e2e.sh  smoke.sh
src/: main.cc  otf_app.cc  otf_bookmark_runtime.cc  otf_browse_runtime.cc  otf_certificate_runtime.cc  otf_clear_data_rpc.cc  otf_console_rpc.cc  otf_context_menu_runtime.cc  otf_cookie_tracking_rpc.cc  otf_devtools_bridge.cc  otf_doc_preview_rpc.cc  otf_doc_preview_runtime.cc  otf_downloads_rpc.cc  otf_downloads_runtime.cc  otf_event_runtime.cc  otf_find_runtime.cc  otf_findbar_rpc.cc  otf_handler.cc  otf_history_bookmarks_rpc.cc  otf_image_preview_rpc.cc  otf_image_preview_runtime.cc  otf_keyboard_runtime.cc  otf_lifecycle_runtime.cc  otf_memory_runtime.cc  otf_message_router_handler.cc  otf_native_rpc.cc  otf_navigation_rpc.cc  otf_page_policy.cc  otf_page_runtime.cc  otf_permissions_rpc.cc  otf_popup_overlay.cc  otf_popup_runtime.cc  otf_request_context_runtime.cc  otf_resource_runtime.cc  otf_rpc_dispatcher.cc  otf_search_rpc.cc  otf_settings_rpc.cc  otf_shutdown_runtime.cc  otf_site_data_rpc.cc  otf_split_runtime.cc  (+9 more)
tests/: otf_extra_tests.cc  otf_native_tests.cc
tests/e2e/: README.md  app-menu.test.js  auto-picture-in-picture-permission.test.js  bookmarks.test.js  bridge-trust.test.js  canvas-protection.test.js  certificate.test.js  clear-site-data.test.js  console.test.js  context-menu.test.js  cookie-privacy-policy.test.js  cookie-tracking.test.js  dev-browser-smoke.test.js  doc-preview.test.js  downloads.test.js  e2e.manifest.json  findbar.test.js  fingerprints.test.js  fullscreen.test.js  history.test.js  image-permission.test.js  image-preview.test.js  insecure-blocked.test.js  internal-scheme.test.js  javascript-permission.test.js  keyboard-shortcuts.test.js  lazy-tabs.test.js  navigation.test.js  newtab-and-urlbar.test.js  newtab.test.js  permission-controls.test.js  permissions-rpc.test.js  popup-intent.test.js  popup-overlay.test.js  popup-scheme.test.js  private-tab.test.js  private-tabs.test.js  qr.test.js  search-history.test.js  search-rpc.test.js  (+19 more)
tests/e2e/helpers/: browserHarness.js  e2eUtils.js
tests/native/: test_doc_preview.cc  test_json_bridge.cc  test_store.cc  test_tab_manager.cc  test_url_policy.cc
ui/: appmenu.html  blockedpopup.html  bookmarkbar.html  bookmarks.html  certificate.html  cleardata.html  console.html  contextmenu.html  docpreview.html  downloadrequest.html  downloads.html  downloadsbar.html  findbar.html  fingerprints.html  history.html  imagepreview.html  index.html  insecure-blocked.html  linkpreview.html  newtab.html  popup-intent-target.html  popup-intent.html  popup-test.html  qr.html  security.html  settings.html  sitedata.html  snipperview.html  splitmenu.html  splitplaceholder.html  toast.html  vite.config.js  workspace.html  zoombar.html
ui/bookmarkbar/: BookmarkBar.jsx  main.jsx
ui/console/: ConsolePanel.jsx  main.jsx
ui/contextmenu/: ContextMenu.jsx  main.jsx
ui/docpreview/: CsvViewer.jsx  DocPreview.jsx  MarkdownViewer.jsx  TextViewer.jsx  main.jsx
ui/downloadsbar/: DownloadsBar.jsx  main.jsx
ui/findbar/: FindBar.jsx  main.jsx
ui/imagepreview/: ImagePreview.jsx  main.jsx
ui/linkpreview/: LinkPreview.jsx  main.jsx
ui/newtab/: index.html
ui/settings/: index.html
ui/snipperview/: SnipViewer.jsx  main.jsx
ui/src/: App.jsx
ui/src/appmenu/: AppMenu.jsx  main.jsx
ui/src/bookmarks/: main.jsx  (+1 more)
ui/toast/: Toast.jsx  main.jsx
ui/workspace/: WorkspaceSwitcher.jsx  main.jsx
ui/zoombar/: ZoomBar.jsx  main.jsx
website/: global.css  index.html  package.json  vite.config.js
website/app/: 404.jsx  layout.jsx  page.jsx
website/public/: picture-in-picture-test.html  popup-test.html
(+70 files in other folders)
