# gn target for the otf browser binary (plan.md §8).
#
# Placed into the Chromium checkout as //otf/BUILD.gn by scripts/bootstrap-chromium.sh
# (which symlinks engine/ -> chromium/src/otf). Additive only: no upstream
# Chromium files are edited, so rebasing stays cheap.
#
# Build flow (see scripts/build-engine.sh):
#   1. cargo builds engine/backend -> libotf_backend.a (staticlib, bindgen on
#      shim/bridge.h).
#   2. this target compiles the shim + entry point, defines OTF_WITH_CONTENT,
#      links libotf_backend.a, and pulls in the content layer.

import("//build/config/ui.gni")
import("//mojo/public/tools/bindings/mojom.gni")

# The JS<->Rust bridge transport interface (renderer <-> browser). Generates the
# C++ bindings the shim's browser/renderer clients use.
mojom("otf_mojom") {
  sources = [ "shim/otf_bridge.mojom" ]
}

# Cargo writes libotf_backend.a outside the Chromium tree (engine/ is symlinked
# in as //otf). A -L pointing out through that symlink doesn't resolve at link
# time, so copy the staticlib into the build dir and link it from there — a
# self-contained, location-robust path.
copy("otf_backend_staticlib") {
  sources = [ "//otf/backend/target/release/libotf_backend.a" ]
  outputs = [ "$target_out_dir/libotf_backend.a" ]
}

executable("otf_browser") {
  # First light reuses content_shell's embedder scaffolding, which is testonly,
  # so this binary is testonly until Phase 2b replaces it with our own embedder.
  testonly = true

  sources = [
    "shim/bridge.cc",
    "shim/bridge.h",
    "shim/otf_bridge_host.cc",
    "shim/otf_bridge_host.h",
    "shim/otf_bridge_render_frame_observer.cc",
    "shim/otf_bridge_render_frame_observer.h",
    "shim/otf_content_browser_client.cc",
    "shim/otf_content_browser_client.h",
    "shim/otf_content_renderer_client.cc",
    "shim/otf_content_renderer_client.h",
    "shim/otf_main.cc",
    "shim/otf_main_delegate.cc",
    "shim/otf_main_delegate.h",
    "shim/otf_tab_host.cc",
    "shim/otf_tab_host.h",
  ]

  defines = [ "OTF_WITH_CONTENT" ]

  # Mirrors content/shell:content_shell so ShellMainDelegate has its clients,
  # resources (content_shell.pak) and V8 snapshot available at runtime. The
  # bridge clients add gin/v8/blink (renderer JS bindings), mojo, and content's
  # public browser/renderer APIs.
  deps = [
    ":otf_backend_staticlib",
    ":otf_mojom",
    "//base",
    "//content/public/app",
    "//content/public/browser",
    "//content/public/renderer",
    "//content/shell:content_shell_app",
    "//content/shell:content_shell_lib",
    "//content/shell:pak",
    "//gin",
    "//mojo/public/cpp/bindings",
    "//sandbox",
    "//third_party/blink/public:blink_headers",
    "//ui/aura",
    "//ui/base",
    "//ui/gfx/geometry",
    "//url",
    "//v8",
  ]

  data_deps = [
    "//content/shell:pak",
    "//tools/v8_context_snapshot",
  ]

  if (is_linux || is_chromeos) {
    data_deps += [ "//components/crash/core/app:chrome_crashpad_handler" ]
  }

  # Link the Rust backend staticlib from its copied-in location. `libs` only
  # adds `-lotf_backend` to the link command — it does NOT make ninja treat the
  # .a as an input, so a Rust-only change (new .a, unchanged shim) would not
  # relink. Declaring it in `inputs` adds the dependency edge so every staticlib
  # rebuild relinks otf_browser.
  lib_dirs = [ target_out_dir ]
  libs = [ "otf_backend" ]
  inputs = [ "$target_out_dir/libotf_backend.a" ]

  # Our cargo staticlib bundles Rust std, and the binary also links Chromium's
  # own Rust std. Built with the same toolchain (see build-engine.sh) those std
  # symbols are identical, so allow the linker to merge the duplicates instead of
  # erroring. TODO(phase3): drop this by building the backend as an in-tree
  # rust_static_library that shares Chromium's std (no bundled copy).
  ldflags = [ "-Wl,--allow-multiple-definition" ]

  # Build -fno-rtti like the rest of content (the default no_rtti config). The
  # shim subclasses content/content_shell polymorphic types (ShellMainDelegate,
  # RenderFrameObserver, the mojo/gin bases), which are compiled without RTTI and
  # export no typeinfo; enabling RTTI here would emit undefined typeinfo refs.
}
