# gn target for the otf browser binary (plan.md §8).
#
# Placed into the Chromium checkout as //otf/BUILD.gn by scripts/bootstrap-chromium.sh
# (which symlinks engine/ -> chromium/src/otf). Additive only: no upstream
# Chromium files are edited, so rebasing stays cheap.
#
# Build flow:
#   1. rust_bindgen turns shim/bridge.h into Rust FFI decls.
#   2. rust_static_library builds engine/backend in-tree (sharing Chromium's
#      Rust std and vendored crates) into the otf_backend rlib.
#   3. this target compiles the shim + entry point, defines OTF_WITH_CONTENT,
#      links otf_backend, and pulls in the content layer.

import("//build/config/ui.gni")
import("//build/rust/rust_bindgen.gni")
import("//build/rust/rust_static_library.gni")
import("//mojo/public/tools/bindings/mojom.gni")

# The JS<->Rust bridge transport interface (renderer <-> browser). Generates the
# C++ bindings the shim's browser/renderer clients use.
mojom("otf_mojom") {
  sources = [ "shim/otf_bridge.mojom" ]
}

# bindgen the FFI header (shim/bridge.h) into Rust `extern "C"` decls, in-tree.
# Replaces the cargo build.rs bindgen on the with-content path. The allowlist
# mirrors build.rs so the generated surface is identical (the otf_api() entry
# point + the Otf* interface tables/handles). bridge.h only pulls <stddef.h>/
# <stdint.h>, so no C `deps` are needed.
rust_bindgen("otf_bridge_bindgen") {
  header = "shim/bridge.h"
  bindgen_flags = [
    "allowlist-function=otf_.*",
    "allowlist-type=Otf.*",
  ]
}

# The Rust control brain, built in-tree so it shares Chromium's Rust std (one
# std, no bundled-copy duplicate -> no --allow-multiple-definition link hack) and
# pulls vendored crates from //third_party/rust. cargo is kept only for the
# standalone `cargo test` inner loop (engine/backend, with-content off).
#
# The `in-tree` feature switches the backend's FFI module from the cargo
# build.rs/OUT_DIR bindings to the rust_bindgen target above (see backend/src/lib.rs).
rust_static_library("otf_backend") {
  crate_root = "backend/src/lib.rs"
  edition = "2021"
  allow_unsafe = true
  sources = [
    "backend/src/backend.rs",
    "backend/src/bridge.rs",
    "backend/src/lib.rs",
  ]
  features = [
    "with-content",
    "in-tree",
  ]
  deps = [
    ":otf_bridge_bindgen",
    "//third_party/rust/serde_json/v1:lib",
  ]
}

executable("otf_browser") {
  # First light reuses content_shell's embedder scaffolding, which is testonly,
  # so this binary is testonly until Phase 2b replaces it with our own embedder.
  testonly = true

  sources = [
    "shim/bridge.cc",
    "shim/bridge.h",
    "shim/otf_browser_context.cc",
    "shim/otf_browser_context.h",
    "shim/otf_browser_main_parts.cc",
    "shim/otf_browser_main_parts.h",
    "shim/otf_bridge_host.cc",
    "shim/otf_bridge_host.h",
    "shim/otf_bridge_render_frame_observer.cc",
    "shim/otf_bridge_render_frame_observer.h",
    "shim/otf_content_browser_client.cc",
    "shim/otf_content_browser_client.h",
    "shim/otf_content_renderer_client.cc",
    "shim/otf_content_renderer_client.h",
    "shim/otf_main.cc",
    "shim/otf_main_delegate.cc",
    "shim/otf_main_delegate.h",
    "shim/otf_tab_host.cc",
    "shim/otf_tab_host.h",
    "shim/otf_window.cc",
    "shim/otf_window.h",
  ]

  defines = [ "OTF_WITH_CONTENT" ]

  # Mirrors content/shell:content_shell so ShellMainDelegate has its clients,
  # resources (content_shell.pak) and V8 snapshot available at runtime. The
  # bridge clients add gin/v8/blink (renderer JS bindings), mojo, and content's
  # public browser/renderer APIs.
  deps = [
    ":otf_backend",
    ":otf_mojom",
    "//base",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//content/public/app",
    "//content/public/browser",
    "//content/public/renderer",
    "//content/shell:content_shell_app",
    "//content/shell:content_shell_lib",
    "//content/shell:pak",
    "//gin",
    "//mojo/public/cpp/bindings",
    "//net",
    "//sandbox",
    "//third_party/blink/public:blink_headers",
    "//ui/aura",
    "//ui/base",
    "//ui/gfx/geometry",
    "//ui/views",
    "//ui/views/controls/webview",
    "//url",
    "//v8",
  ]

  data_deps = [
    "//content/shell:pak",
    "//tools/v8_context_snapshot",
  ]

  if (is_linux || is_chromeos) {
    data_deps += [ "//components/crash/core/app:chrome_crashpad_handler" ]
  }

  # The Rust backend is the in-tree rust_static_library `:otf_backend` (in deps).
  # gn tracks it as a real dependency edge and links it sharing Chromium's Rust
  # std, so the old copy/lib_dirs/inputs and --allow-multiple-definition hacks
  # are gone.

  # Build -fno-rtti like the rest of content (the default no_rtti config). The
  # shim subclasses content/content_shell polymorphic types (ShellMainDelegate,
  # RenderFrameObserver, the mojo/gin bases), which are compiled without RTTI and
  # export no typeinfo; enabling RTTI here would emit undefined typeinfo refs.
}
